@@ -15,6 +15,9 @@ documents those changes that are of interest to users and admins.
  -- Modify srun --test-only response to include expected initiation time 
     for a job as well as the nodes to be allocated and processor count
     (for use by Moab).
+ -- Correct sched/backfill to properly honor job dependencies.
+ -- Correct select/cons_res logic to allocate CPUs properly if there is
+    more than one thread per core (previously failed to allocate all cores).
 
 * Changes in SLURM 1.3.0
 ========================
